--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
             <div id=8 class="cell"></div>
         </div>
         <h2 class="game--status"></h2>
-        <button class="game--restart" onclick="restart_game()">Restart Game</button>
+        <button class="game--restart" onclick="restartGame()">Restart Game</button>
     </section>
 </body>
 </html>
